--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@mui/icons-material": "^5.10.9",
         "@mui/lab": "^5.0.0-alpha.97",
         "@mui/material": "^5.10.11",
+        "@mui/styles": "^5.10.16",
         "@mui/system": "^5.10.12",
         "@mui/x-data-grid": "^5.17.10",
         "@mui/x-data-grid-pro": "^5.17.10",
@@ -61,6 +62,7 @@
         "react-firebase-hooks": "^5.0.3",
         "react-hot-loader": "^4.13.0",
         "react-i18next": "^11.16.6",
+        "react-material-ui-carousel": "^3.4.2",
         "react-mui-fileuploader": "^0.3.0",
         "react-perfect-scrollbar": "^1.5.8",
         "react-promise-tracker": "^2.1.0",
