--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@mui/system": "^5.10.12",
         "@mui/x-data-grid": "^5.17.10",
         "@mui/x-data-grid-pro": "^5.17.10",
+        "@paypal/react-paypal-js": "^7.8.2",
         "@reduxjs/toolkit": "^1.8.1",
         "buffer": "^6.0.3",
         "copy-webpack-plugin": "^11.0.0",
